<resources>
    <string name="app_name">StarCast</string>
    <string name="text_search_people">Search People E.g.Owen Lars</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_search">search</string>
    <string name="text_name">Name</string>
    <string name="text_opening_crawl">Opening Crawl</string>
    <string name="text_birth_year">Birth Year</string>
    <string name="text_height">Height</string>
    <string name="text_films">Films</string>
    <string name="text_enter_people_name">Please enter people name.</string>
    <string name="text_cm"> Cm</string>
    <string name="text_film">\ Film\ </string>


    <string-array name="Weight">
        <item>1 Film </item>
        <item>2 Film </item>
        <item>3 Film </item>
    </string-array>
</resources>