<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/star_wars_landing_image"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.8"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="8dp">

            <TextView
                android:id="@+id/textView"
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvName"

                style="@style/MyTextViewStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView"
                tools:text="Dishant" />

            <TextView
                android:id="@+id/textView3"
                style="@style/MyTextViewStyle"
                android:text="@string/text_birth_year"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/tvBirthYear"
                style="@style/MyTextViewStyle"
                app:layout_constraintStart_toStartOf="@+id/tvName"
                app:layout_constraintTop_toBottomOf="@+id/tvName"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textView5"
                style="@style/MyTextViewStyle"
                android:text="@string/text_height"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/tvHeight"
                style="@style/MyTextViewStyle"
                app:layout_constraintStart_toStartOf="@+id/tvBirthYear"
                app:layout_constraintTop_toBottomOf="@+id/tvBirthYear"
                tools:text="Height" />

            <TextView
                android:id="@+id/textView7"
                style="@style/MyTextViewStyle"
                android:text="@string/text_films"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/tvFilms"
                style="@style/MyTextViewStyle"
                app:layout_constraintStart_toStartOf="@+id/tvHeight"
                app:layout_constraintTop_toBottomOf="@+id/tvHeight"
                tools:text="films" />

            <TextView
                android:id="@+id/textView10"
                style="@style/MyTextViewStyle"
                android:text="@string/text_opening_crawl"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/tvOpeningCrawl"
                style="@style/MyTextViewStyle"
                app:layout_constraintStart_toStartOf="@+id/tvFilms"
                app:layout_constraintTop_toBottomOf="@+id/tvFilms"
                tools:text="OpeningCrawl" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>